<resources>
    <string name="app_name">Happy Birthday</string>
    <string name="happy_birthday_brother">Happy Birthday Brother</string>
    <string name="from_nabeel">from Nabeel</string>
    <string name="enter_tip_amount">Enter tip amount</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="ok_15">OK (15%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="calculated_tip">Calculated tip</string>
    <string name="result">Calculated Tip : %s</string>
    <string name="entername">Entername</string>
    <string name="enter_the_tip_amount">Enter the tip amount</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="go_to_words_app">Go to Words App</string>
    <string name="button">Button</string>
    <string name="detail_title">You clicked on </string>
    <string name="action_switch_layout">action_Switch_layout</string>
    <string name="dish_button">Dish Button</string>
    <string name="click_on_dessert_to_purchase">Click on dessert to purchase.</string>
    <string name="total">Total in $: </string>
    <string name="total_print">Total in %s</string>
    <string name="share_something">share_something</string>
    <string name="back_action">back_action</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>