<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipCounterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/stroke_background"
            >

            <TextView
                style="@style/Widget.TipTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_calculator"
                android:textSize="16sp"
                android:textColor="@color/red"
                android:layout_gravity="center"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tipAmoun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tipAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:hint="@string/enter_the_tip_amount"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/how_was_the_service"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tipAmoun" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.231"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/amazingRadioButton"
                    style="@style/Widget.TipTime.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/amazing_20"
                    android:textSize="18sp"
                    app:buttonTint="@color/red" />

                <RadioButton
                    android:id="@+id/goodRadioButton"
                    style="@style/Widget.TipTime.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_18"
                    android:textSize="18sp"
                    app:buttonTint="@color/red" />

                <RadioButton
                    android:id="@+id/okRadioButton"
                    style="@style/Widget.TipTime.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_15"
                    android:textSize="18sp"
                    app:buttonTint="@color/red" />

            </RadioGroup>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/roundUpSwitch"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:checked="true"
                android:text="Round up?"
                android:textColorHighlight="@color/red"
                android:textColorLink="@color/red"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:useMaterialThemeColors="false" />

            <Button
                android:id="@+id/calculateButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/calculate_tip"
                android:textColor="#AE2B2B"
                app:iconTint="#AE2B2B"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roundUpSwitch"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:hint="@string/calculated_tip"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calculateButton"
                app:layout_constraintVertical_bias="0.032" />

            <ImageView
                android:id="@+id/icon_amount"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_paid_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/tipAmoun"
                app:layout_constraintEnd_toStartOf="@+id/tipAmoun"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tipAmoun"
                app:layout_constraintVertical_bias="0.66"
                app:tint="#AE2B2B"
                app:tintMode="src_in" />

            <ImageView
                android:id="@+id/icon_room_service"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_room_service_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.857"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:layout_constraintVertical_bias="0.55"
                app:tint="#AE2B2B"
                app:tintMode="src_in" />

            <ImageView
                android:id="@+id/icon_round_up"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_change_circle_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/roundUpSwitch"
                app:layout_constraintEnd_toStartOf="@+id/roundUpSwitch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/roundUpSwitch"
                app:tint="#AE2B2B"
                app:tintMode="src_in" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</ScrollView>

